Added main frame

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,1 +1,7 @@
+# FileChooser configuration
+file.default_folder=C:/
+file.type=TXT files (*.txt)
+file.extension=*.txt
+
+app.title=Graph Viewer by Lokkina Olesia
 icon.path=/images/icon.png
