Added TypeHierarchy visualization

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -2,6 +2,7 @@
 file.default_folder=C:/
 file.type=TXT files (*.txt)
 file.extension=*.txt
-
+viewer.area.height=800
+viewer.area.width=800
 app.title=Graph Viewer by Lokkina Olesia
 icon.path=/images/icon.png
