--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,8 +1,11 @@
 # FileChooser configuration
-file.default_folder=C:/
-file.type=TXT files (*.txt)
-file.extension=*.txt
+file.default_folder=C:/Users/5otai/IdeaProjects/CGVM/src/main/resources/samples
+# Graph area
 viewer.area.height=800
 viewer.area.width=800
-app.title=Graph Viewer by Lokkina Olesia
-icon.path=/images/icon.png
+# App
+app.title=Graph Viewer
+app.name=Graph Viewer by Lokkina Olesia
+app.version=0.0.4
+app.fxml=/scenes/viewer_scene.fxml
+app.icon.path=/images/icon.png
