Added CgifGenerator + QueryProcessor (in progress)

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -5,7 +5,7 @@ viewer.area.height=800
 viewer.area.width=800
 # App
 app.title=Graph Viewer
-app.name=Graph Viewer by Lokkina Olesia
+app.description=Graph Viewer by Lokkina Olesia
 app.version=0.0.4
 app.fxml=/scenes/viewer_scene.fxml
 app.icon.path=/images/icon.png
