--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <commons-lang.version>3.12.0</commons-lang.version>
+        <commons-io.version>2.8.0</commons-io.version>
         <slf4j.version>1.7.30</slf4j.version>
         <javacc.version>7.0.10</javacc.version>
         <jackson.version>2.12.3</jackson.version>
-        <jena.version>4.0.0</jena.version>
         <jgrapht.version>1.5.1</jgrapht.version>
         <lombok.version>1.18.18</lombok.version>
         <javafx.version>17-ea+6</javafx.version>
@@ -34,6 +35,18 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>net.java.dev.javacc</groupId>
             <artifactId>javacc</artifactId>
             <version>${javacc.version}</version>
@@ -49,31 +62,6 @@
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
             <version>${jgrapht.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena-libs</artifactId>
-            <type>pom</type>
-            <version>${jena.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>jena-text</artifactId>
-            <version>${jena.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>jena-arq</artifactId>
-            <version>${jena.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.jena</groupId>
-            <artifactId>jena-core</artifactId>
-            <version>${jena.version}</version>
         </dependency>
 
         <dependency>
